<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">威士德</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_splash">智慧创造精彩     威士德</string>
    <string name="tv_login_title">欢迎登录威士德智能终端系统</string>
    <string name="et_login_username">请输入用户名</string>
    <string name="et_login_userpassword">请输入密码</string>
    <string name="cb_login_remember">记住密码</string>
    <string name="cb_login_automatic">自动登录</string>
    <string name="btn_login">登录</string>
    <string name="tv_login_help">忘记密码？</string>
    <string name="tv_indentification_code">验证码：</string>
    <string name="tv_login_new">新用户！</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tv_cart_index">11</string>

</resources>
